tests/idris2/misc/import002/expected
1/3: Building Nat (Nat.idr)
2/3: Building Mult (Mult.idr)
3/3: Building Test (Test.idr)
Error: While processing type of thing. Undefined name Nat. 

Test:5:9--5:12
 1 | module Test
 2 |
 3 | import Mult
 4 |
 5 | thing : Nat -> Nat
             ^^^

Error: While processing right hand side of thing. Undefined name plus. 

Test:6:19--6:23
 2 |
 3 | import Mult
 4 |
 5 | thing : Nat -> Nat
 6 | thing x = mult x (plus x x)
                       ^^^^

